<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UCalc Beta</string>

    <string name="settings_title">Settings</string>

    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_recall">Recall</string>
    <string name="menu_store">Store</string>
    <string name="menu_share">Share</string>

    <string name="frag_title_memory">Memory</string>
    <string name="frag_title_stack">Stack</string>

    <string name="pref_title_style">Style Settings</string>
    <string name="pref_title_calculation">Calculation Settings</string>
    <string name="pref_title_display">Display Settings</string>
    <string name="pref_title_network">Network Settings</string>
    <string name="pref_title_about">About</string>

    <string name="pref_title_dark_theme">Dark theme</string>
    <string name="pref_title_sound_feedback">Sound</string>
    <string name="pref_title_haptic_feedback">Haptic feedback</string>
    <string name="pref_title_inverse_trig_units">Inverse trig units</string>
    <string name="pref_title_simplify_units">Simplify units</string>
    <string name="pref_title_natural_evaluator">Natural evalutation</string>
    <string name="pref_title_naive_evaluator">Naive arithmetics</string>
    <string name="pref_title_rpn_functions_evaluator">RPN-style functions</string>
    <string name="pref_title_precision">Precision</string>
    <string name="pref_title_decimal_separator">Decimal separator</string>
    <string name="pref_title_group_separator">Group separator</string>
    <string name="pref_title_group_size">Group size</string>
    <string name="pref_title_show_ratios">Ratios as is if possible</string>
    <string name="pref_title_show_polar_complex">Polar complex numbers</string>
    <string name="pref_title_load_currencies">Load currencies from Internet</string>
    <string name="pref_title_currencies_source">Currencies source</string>
    <string name="pref_title_use_wifi_only">Load via Wi-Fi only</string>
    <string name="pref_title_currency_load_frequency">Currencies update frequency</string>
    <string name="pref_title_show_mixed_ratios">Mixed fractions</string>
    <string name="pref_title_show_currencies">Visible currencies</string>
    <string name="pref_title_orientation">Orientation</string>

    <string name="pref_summary_sound_feedback">Clicking sound on buttons press</string>
    <string name="pref_summary_haptic_feedback">Vibrate on buttons press</string>
    <string name="pref_summary_inverse_trig_units">Reverse triginometric function results will have units</string>
    <string name="pref_summary_natural_evaluator">Work as normal calculator, use Enter to finish evaluation</string>
    <string name="pref_summary_naive_evaluator">Do not take operations precedence into account</string>
    <string name="pref_summary_rpn_functions_evaluator">Execute function on stack immediately (like in RPN mode)</string>
    <string name="pref_summary_precision">Number of decimal digits to display (highest precision available is used inside anyway). Current value: %d</string>
    <string name="pref_summary_show_ratios">Show 0.3333… as 1/3, unless tainted by irrational numbers like π</string>
    <string name="pref_summary_show_polar_complex">Show complex numbers as a pair of magnitude and angle</string>
    <string name="pref_summary_currency_load_frequency">Update currencies %d times per day</string>
    <string name="pref_summary_show_mixed_ratios">Show improper fractions in mixed form (3/2 as 1 1/2)</string>

    <string name="pref_summary_current_integer_value">Current value: %d</string>
    <string name="pref_summary_current_string_value">Current value: %s</string>

    <string name="pref_title_repo">Github repository</string>
    <string name="pref_summary_repo">github.com/kstep/ucalc</string>
    <string name="pref_title_bugs">Bugtracker</string>
    <string name="pref_summary_bugs">github.com/kstep/ucalc/issues</string>
    <string name="pref_title_email">Email developer</string>
    <string name="pref_summary_email">me@kstep.me</string>
    <string name="pref_title_unc">Unc: A Units Calculator</string>
    <string name="pref_summary_unc">iPhone units calculator UCalc was inspired by</string>

	<string name="pref_summary_load_currencies">Last loaded: %s</string>
	<string name="pref_summary_load_currencies_unknown">unknown</string>
	<string name="pref_summary_load_currencies_never">never</string>

    <string name="pref_summary_show_currencies_all">show all currencies</string>
    <string name="pref_summary_show_currencies_some">show %s</string>
    <string name="pref_summary_show_currencies_more">and %d more</string>

    <string name="info_currencies_loading_started">Loading currencies…</string>
    <string name="err_currencies_loading_failed">Currencies loading failed</string>
    <string name="err_currencies_loaded_from_cache">Currencies loading failed, %d currencies loaded from cache</string>
    <string name="info_currencies_loading_succeed">%d currencies loaded successfully</string>

    <string name="help_unit_base">This is a base unit.</string>
    <string name="help_unit_definition">This unit is defined as: %s</string>
    <string name="help_btn_operation" formatted="false">This is a “%s” operation button. It takes %d arguments from the stack and puts %d items back to it.</string>

    <string name="btn_title_dismiss">Dismiss</string>

    <string name="pref_title_version">© Konstantin Stepanov, 2013</string>
    <string name="pref_summary_version">Version %s</string>
</resources>
