<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="general" android:title="@string/pref_title_general">
        <CheckBoxPreference android:key="dark_theme" android:title="@string/pref_title_dark_theme" android:defaultValue="false" />
        <CheckBoxPreference android:key="sound_feedback" android:title="@string/pref_title_sound_feedback" android:summary="@string/pref_summary_sound_feedback" android:defaultValue="false" />
        <CheckBoxPreference android:key="haptic_feedback" android:title="@string/pref_title_haptic_feedback" android:summary="@string/pref_summary_haptic_feedback" android:defaultValue="false" />

        <CheckBoxPreference android:key="inverse_trig_units" android:title="@string/pref_title_inverse_trig_units" android:summary="@string/pref_summary_inverse_trig_units" android:defaultValue="true" />
        <CheckBoxPreference android:key="simplify_units" android:title="@string/pref_title_simplify_units" android:defaultValue="true" />
        <CheckBoxPreference android:key="natural_evaluator" android:title="@string/pref_title_natural_evaluator" android:summary="@string/pref_summary_natural_evaluator" android:defaultValue="false" />

        <CheckBoxPreference android:dependency="natural_evaluator" android:key="naive_evaluator" android:title="@string/pref_title_naive_evaluator" android:summary="@string/pref_summary_naive_evaluator" android:defaultValue="false" />
        <CheckBoxPreference android:dependency="natural_evaluator" android:key="rpn_functions_evaluator" android:title="@string/pref_title_rpn_functions_evaluator" android:summary="@string/pref_summary_rpn_functions_evaluator" android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_display" android:key="display">
        <me.kstep.ucalc.preferences.IntegerPreference android:key="precision" android:title="@string/pref_title_precision" android:numeric="integer" android:defaultValue="7" android:summary="@string/pref_summary_precision" />

        <ListPreference android:key="decimal_separator" android:title="@string/pref_title_decimal_separator" android:entryValues="@array/decimal_separators" android:entries="@array/decimal_separator_names" android:defaultValue="," />

        <ListPreference android:key="group_separator" android:title="@string/pref_title_group_separator" android:entryValues="@array/group_separators" android:entries="@array/group_separator_names" android:defaultValue="." />

        <me.kstep.ucalc.preferences.IntegerPreference android:key="group_size" android:title="@string/pref_title_group_size" android:numeric="integer" android:defaultValue="3" />

        <CheckBoxPreference android:key="show_ratios" android:title="@string/pref_title_show_ratios" android:summary="@string/pref_summary_show_ratios" android:defaultValue="false" />
        <CheckBoxPreference android:key="show_polar_complex" android:title="@string/pref_title_show_polar_complex" android:summary="@string/pref_summary_show_polar_complex" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
